--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -874,7 +874,7 @@ li {
     color: black;
     text-align: center;
     cursor: pointer;
-    padding-top: px;
+    padding-top: 40px;
   }
 
   .review_element {
